--- a/pool-game-tutorial/index.html
+++ b/pool-game-tutorial/index.html
@@ -12,6 +12,9 @@
     <script src='Game.js'></script>
     <script src='GameWorld.js'></script>
     <script src='Stick.js'></script>
+    <script src='Vector2.js'></script>
+    <script src='input/ButtonState.js'></script>
+    <script src='input/Mouse.js'></script>
 
     <script>
       loadAssets(PoolGame.start);
